Fix not visible Navbar menu

--- a/src/css/components/_navbar.scss
+++ b/src/css/components/_navbar.scss
@@ -181,18 +181,18 @@
     min-height: 56px;
   }
   .st-nav-breaker {
-    height: 56px;
+    display: none;
   }
 }
 @media (max-width: 700px) {
   .lg-navbar {
     .lg-navbar__item {
-      display: none;
+      display: block;
     }
     .lg-navbar__header {
       display: block;
     }
-    position: relative;
+    position: fixed;
   }
   .nav-breaker {
     display: none;
